--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>红岸-游戏主页</title>
+    <title>红岸-项目主页</title>
     <meta name="keywords" content="/fonts/Futura-Medium-6.woff">
     <meta name="description" content="/fonts/WenYue-ShengHuoJiaTi-J.woff"> 
     <link rel="icon" href="./assets/images/favicon.png">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <script src="./assets/js/jquery.min.js"></script>
 </head>
-<h1 align="center">欢迎来到红岸小游戏主页~</h1>
+<h1 align="center">欢迎来到红岸项目主页~</h1>
 <h3 align="center">点我查看</h3>
         <!-- 滑动效果 -->
         <p class="xf_slide">&#xeb6d;</p>
