--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ width:400px;height:90px"href="https://lxhymh.github.io/pac-man/"_blank" rel="noo
             <a style="background:url(./assets/images/react-tetris.png);
 width:400px;height:90px"href="https://lxhymh.github.io/react-tetris/"_blank" rel="noopener noreferrer">React Tetris - 经典俄罗斯方块</a>
             <a style="background:url(./assets/images/battle-city.png);
-width:400px;height:90px"href="https://lxhymh.github.io/battle-city/"_blank" rel="noopener noreferrer">Battle-city - 经典坦克大战</a>
+width:400px;height:90px"href="https://lxhymh.github.io/battle-city/"_blank" rel="noopener noreferrer">Hongan Battle city - 经典坦克大战</a>
 
 
         </div>
