--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="xf_slide">&#xeb6d;</p>
         <div class="xf_website">
             <a style="background:url(./assets/images/firework.png);
-width:305px;height:120px" href="https://lxhymh.github.io/firework/"_blank" rel="noopener noreferrer">Hongan firework - 一个有趣的烟花游戏</a>
+width:305px;height:120px" href="https://a.hongan.eu.org/firework/"_blank" rel="noopener noreferrer">Hongan firework - 一个有趣的烟花游戏</a>
             <a style="background:url(./assets/images/rainbow-galaxy.png);
 width:305px;height:120px"href="https://lxhymh.github.io/rainbow-galaxy/"_blank" rel="noopener noreferrer">Hongan rainbow-galaxy - 一个属于你的彩虹星系</a>
             <a style="background:url(./assets/images/pac-man.png);
