--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <p class="xf_slide">&#xeb6d;</p>
         <div class="xf_website">
             <a style="background:url(./assets/images/firework.png);
-width:305px;height:120px" href="https://a.hongan.eu.org/firework/"_blank" rel="noopener noreferrer">Hongan firework - 一个有趣的烟花游戏</a>
+width:305px;height:120px" href="https://lxhymh.github.io/firework/"_blank" rel="noopener noreferrer">Hongan firework - 一个有趣的烟花游戏</a>
             <a style="background:url(./assets/images/rainbow-galaxy.png);
-width:305px;height:120px"href="https://a.hongan.eu.org/rainbow-galaxy/"_blank" rel="noopener noreferrer">Hongan rainbow-galaxy - 一个属于你的彩虹星系</a>
+width:305px;height:120px"href="https://lxhymh.github.io/rainbow-galaxy/"_blank" rel="noopener noreferrer">Hongan rainbow-galaxy - 一个属于你的彩虹星系</a>
             <a style="background:url(./assets/images/pac-man.png);
-width:305px;height:120px"href="https://a.hongan.eu.org/pac-man/"_blank" rel="noopener noreferrer">Pac Man - 经典吃豆人游戏</a>
+width:305px;height:120px"href="https://lxhymh.github.io/pac-man/"_blank" rel="noopener noreferrer">Pac Man - 经典吃豆人游戏</a>
             <a style="background:url(./assets/images/react-tetris.png);
-width:305px;height:120px"href="https://a.hongan.eu.org/react-tetris/"_blank" rel="noopener noreferrer">React Tetris - 经典俄罗斯方块</a>
+width:305px;height:120px"href="https://lxhymh.github.io/react-tetris/"_blank" rel="noopener noreferrer">React Tetris - 经典俄罗斯方块</a>
             <a style="background:url(./assets/images/battle-city.png);
-width:305px;height:120px"href="https://a.hongan.eu.org/battle-city/"_blank" rel="noopener noreferrer">Battle-city - 经典坦克大战</a>
+width:305px;height:120px"href="https://lxhymh.github.io/battle-city/"_blank" rel="noopener noreferrer">Battle-city - 经典坦克大战</a>
             <a style="background:url(./assets/images/xiaoheizi.png);
-width:305px;height:120px"href="https://a.hongan.eu.org/EatKano/"_blank" rel="noopener noreferrer">Hongan - 干掉小黑子！！！</a>
+width:305px;height:120px"href="https://lxhymh.github.io/EatKano/"_blank" rel="noopener noreferrer">Hongan - 干掉小黑子！！！</a>
 
 
         </div>
